# mados-launcher

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  __main__.py  app.py  config.py  database.py  desktop_entries.py  dock_icon.py  dock_instance.py  dock_renderer.py  mados-launcher.desktop  pyproject.toml  settings_window.py  state_manager.py  theme.py  window_manager.py  window_tracker.py
mados_launcher/: __init__.py  __main__.py  app.py  config.py  desktop_entries.py  dock_icon.py  dock_instance.py  dock_renderer.py  icon_manager.py  logger.py  state.json  state_manager.py  theme.py  window_manager.py  window_tracker.py
tests/: __init__.py  test_basic.py
