[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mados-launcher"
version = "1.0.0"
description = "Application dock for Wayland compositors"
requires-python = ">=3.10"
dependencies = [
    "pygobject",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mados_launcher*"]

[project.scripts]
mados-launcher = "mados_launcher.__main__:main"